For 1.20.8
	- GeoTouchSensor code added.

	- GeoTransform code added.

	- Some routes on parsing initialization were not getting set.

	- Javascript - added SFVec3d support.

	- XML parser - sanity check routing to ensure we route only to proper
	  locations; eg, do not allow routing to an initializeOnly field.

	- Occlusionculling - better performance when testing heavily textured objects
	  for draw status.

For 1.20.7
	- Examine mode - Viewpoint - does distance between 2 points in 3d to determine
	  rotation distance, as per the spec.
	
	- Occlusionculling had difficulties with DEF/USE nodes; fixed.

	- Moving BoundingBox calculations from scenegraph rendering step to node
	  updating step.

	- Polyrep.c; normal finding, might go off end of coordindex array. Fixed.
	  affects Extrusions, IndexedFaceSets, ElevationGrids, etc.

	- X3D Switch statement was not parsing correctly.

For 1.20.6
	- Binding of nodes on parse now done in display thread, instead of parsing
	  thread, to get around infrequent bug that would give erratic results.

	- Binding Viewpoints; edge case; if you have only one Viewpoint, and it exists
	  in an Inline, it can now be bound to when changing viewpoint. (spec says
	  automatic binding on load does not happen with inlined nodes)

	- X3D Parser, PROTO invocation errors; potential crash if value on expansion
	  not found has been fixed.

	- X3D Parser, better error discovery and reporting in MF values for integer,
	  floating point, and double values.

	- threading conflict when getting files from plugin or filesystem - resolved.

For 1.20.5
	- GeoLOD initial implementation.

	- EXAMINE mode - tries to determine distance to geometry, not assume distance to 
	  (0,0,0)

	- remove InlineLoadControl - old VRML Geospatial 1.1 node.

	- Filenames with spaces better handled now - some handling bugs fixed.

	- Textures use proxy loads now, rather than always relying on max texture size value.
